Fixed git branch name to main

--- a/openshift/spm-jenkins-agent-template.yml
+++ b/openshift/spm-jenkins-agent-template.yml
@@ -65,7 +65,7 @@ parameters:
     description:
       Set this to a branch name, tag or other ref of your repository if you
       are not using the default (master) branch.
-    value: master
+    value: main
   - name: SOURCE_CONTEXT_DIR
     displayName: Git Context Directory
     description:
